--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         }
         stage('Test') {
             steps {
-               echo "test completed successfully"
+               echo "test completed successfully."
             }
         }
         stage('Package') {
